@@ -49,8 +49,8 @@ env-parser-talk
 		[X] Change return of run from `IO a` to `IO (Either String a)`
 			We want to account for the possibility of failure
 		[X] Update tests
-		[_] Rewrite our `IO` wrapper to stop on errors
-		[_] Deficiencies
+		[X] Rewrite our `IO` wrapper to stop on errors
+		[X] Deficiencies
 			I'd like to interpret ENV values as things other than strings (deferred)
 			It'd be nice if we knew *all* the missing variables
 				What can't monads do
